src/metrics/snapshots/big_code_analysis__metrics__abc__tests__go_calls_are_branches.snap
---
source: src/metrics/abc.rs
expression: metric.abc
---
{
  "assignments": 1,
  "branches": 3,
  "conditions": 0,
  "magnitude": 3.1622776601683795,
  "assignments_average": 0.25,
  "branches_average": 0.75,
  "conditions_average": 0.0,
  "assignments_min": 0,
  "assignments_max": 1,
  "branches_min": 0,
  "branches_max": 3,
  "conditions_min": 0,
  "conditions_max": 0
}
