src/metrics/snapshots/big_code_analysis__metrics__abc__tests__go_complex_function_abc.snap
---
source: src/metrics/abc.rs
expression: metric.abc
---
{
  "assignments": 6,
  "branches": 1,
  "conditions": 4,
  "magnitude": 7.280109889280518,
  "assignments_average": 3.0,
  "branches_average": 0.5,
  "conditions_average": 2.0,
  "assignments_min": 0,
  "assignments_max": 6,
  "branches_min": 0,
  "branches_max": 1,
  "conditions_min": 0,
  "conditions_max": 4
}
