src/metrics/snapshots/big_code_analysis__metrics__abc__tests__go_for_bare_condition_counts.snap
---
source: src/metrics/abc.rs
expression: metric.abc
---
{
  "assignments": 3,
  "branches": 0,
  "conditions": 3,
  "magnitude": 4.242640687119285,
  "value": 0.0,
  "assignments_average": 1.5,
  "branches_average": 0.0,
  "conditions_average": 1.5,
  "assignments_min": 0,
  "assignments_max": 3,
  "branches_min": 0,
  "branches_max": 0,
  "conditions_min": 0,
  "conditions_max": 3
}
